@@ -1,3 +1,8 @@
+2008-06-26  Laurent Debacker <debackerl@gmail.com> 
+
+	* Theme.cs: Dummy renderer for App menu and app menu item
+	* ApplicationMenu.cs: More work on app menu item
+
 2008-06-25  Laurent Debacker <debackerl@gmail.com> 
 
 	* ApplicationButton.cs: Bugfixes for popup position, and misc other bug
